[package]
name = "blue-noise"
version = "0.2.1"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2024"
description = "High-quality blue noise generation and dithering using the void-and-cluster algorithm"
documentation = "https://docs.rs/blue-noise"
readme = "README.md"
repository = "https://github.com/mblode/blue-noise/"
license = "MIT"
keywords = ["ditherpunk", "noise", "dithering", "dither", "blue-noise"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rustfft = "6.4"
rand = "0.8"
thiserror = "2.0"
anyhow = "1.0"
indicatif = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "blue_noise_benchmark"
harness = false
